studykube/kubernetes/Ingress/mywebsite-ingress-tls.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: mywebsite-ingress-tls
spec:
  tls:
  - hosts:
    - mywebsite.com
    secretName: mywebsite-ingress-secret
  rules:
  - host: mywebsite.com
    http:
      paths:
      - path: /
        backend:
          serviceName: webapp
          servicePort: 8080
